# py-cli

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
documentation/: class.md  components.md
package/commands/: commands.py
package/parser/: parser.py
package/state/: state.py
src/: main.py
tests/: commands_test.py  parser_test.py  state_test.py
