[tool.poetry]
name = "py-cli"
version = "0.1.0"
description = ""
authors = ["MarkBzm <mark472013316@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
flake8-string-format = "^0.3.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
